Fixed issue where parts of resume aren't visible on small screens

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -1,11 +1,10 @@
 // Layout
 // ----------------------------------------------
 // bootstrap: @include media-breakpoint-[down|up|only|between]([xs|sm|md|lg|xl], [xs|sm|md|lg|xl]) { ... }
-html, body {height: 100%;}
+html, body {height: 99.99%;}
 body {
   background-color: $background-bg;
   display: flex;
-  align-items: center;
 }
 
 
@@ -15,7 +14,7 @@ body {
   width: $page-width;
   display: flex;
   flex-flow: column wrap;
-  margin: 0 auto;
+  margin: auto;
   box-shadow: 0 1px 10px rgba(0, 0, 0, 0.5);
   font-size: map-get($scale, small);
 
